# bazel-hello-go-docker

./: BUILD.bazel  README.md  WORKSPACE  main.go
